--- a/mall-parent/docker/docker-compose.yml
+++ b/mall-parent/docker/docker-compose.yml
@@ -1,17 +1,21 @@
 version: "3.5"
 services:
   mall-nacos:
-    image: nacos/nacos-server:2.0.2
+    image: zhusaidong/nacos-server-m1:2.0.3
     container_name: mall-nacos
     ports:
       - 8848:8848
     environment:
       - MODE=standalone
+      - JVM_XMS=512m
+      - JVM_XMX=512m
+      - JVM_XMN=256m
     networks:
       - mall
 
 
   mall-mysql:
+    platform: linux/x86_64
     image: mysql:8.0.27
     container_name: mall-mysql
     ports:
@@ -24,6 +28,7 @@ services:
       - mall
 
   mall-redis:
+    platform: linux/x86_64 # fix M1 bug
     image: redis:6.2.6
     container_name: mall-redis
     ports:
