--- a/mall-parent/mall-buyer-api/pom.xml
+++ b/mall-parent/mall-buyer-api/pom.xml
@@ -58,6 +58,11 @@
       <groupId>com.alibaba.nacos</groupId>
       <artifactId>nacos-client</artifactId>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
