--- a/mall-parent/mall-buyer-provider/pom.xml
+++ b/mall-parent/mall-buyer-provider/pom.xml
@@ -32,6 +32,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
     <!--sharding-jdbc 读写分离 分库分表-->
     <dependency>
       <groupId>org.apache.shardingsphere</groupId>
