--- a/mall-parent/mall-model/pom.xml
+++ b/mall-parent/mall-model/pom.xml
@@ -30,5 +30,17 @@
       <groupId>com.alibaba</groupId>
       <artifactId>fastjson</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-elasticsearch</artifactId>
+      <version>4.2.1</version>
+      <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>transport</artifactId>
+          <groupId>org.elasticsearch.client</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
   </dependencies>
 </project>
