--- a/mall-parent/mall-model/pom.xml
+++ b/mall-parent/mall-model/pom.xml
@@ -42,5 +42,11 @@
         </exclusion>
       </exclusions>
     </dependency>
+      <dependency>
+          <groupId>com.soul.shop</groupId>
+          <artifactId>mall-common</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 </project>
